[project]
name = "dagster_pi"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
description = "An always-on, low-resource Dagster deployment for a Raspberry Pi 5, with a reproducible benchmark harness."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Michael Dean Lindsay", email = "michaeldeanlindsay@gmail.com" }]
dependencies = [
    "dagster==1.13.*",
    "dagster-duckdb>=0.29.9",
    "dagster-webserver==1.13.*",
    "duckdb>=1.5.3",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_pi"
